--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -10,7 +10,7 @@
 <!-- Use any element to open the sidenav -->
 <span onclick="openNav()"><h3>Menu</h3></span>
 <div class="full-screen" id="main">
-    <h2>Current List of FFE Selenium Pipeline Runs</h2>
+    <center><h2>Current List of FFE Selenium Pipeline Runs</h2></center>
     <input type="text" id="searchInput" onkeyup="searchTables()" placeholder="Search for names..">
     <h3>Test 1</h3>
     <table id="test1">
