--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -13,7 +13,7 @@
     <center><h2>Current List of FFE Selenium Pipeline Runs</h2></center>
     <input type="text" id="searchInput" onkeyup="searchTables()" placeholder="Search for names..">
     <h3>Test 1</h3>
-    <table id="test1" class="hover compact" width="100%" data-page-length="25" data-order="[[ 0, &quot;asc&quot; ]]">
+    <table id="test1" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot; ]]">
         <thead>
             <tr>
                 <th>Name</th>
@@ -44,7 +44,7 @@
         </tbody>
     </table>
     <h3>Test 2</h3>
-    <table id="test2" class="hover compact" width="100%" data-page-length="25" data-order="[[ 0, &quot;asc&quot; ]]">
+    <table id="test2" class="hover compact" width="100%"  data-order="[[ 0, &quot;asc&quot; ]]">
         <thead>
             <tr>
                 <th>Name</th>
@@ -73,7 +73,7 @@
         </tbody>
     </table>
     <h3>Test 3</h3>
-    <table id="test3" class="hover compact" width="100%" data-page-length="25" data-order="[[ 0, &quot;asc&quot;]]">
+    <table id="test3" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot;]]">
         <thead>
             <tr>
                 <th>Name</th>
@@ -104,7 +104,7 @@
         </tbody>
     </table>
     <h3>Test4</h3>
-    <table id="test4" class="hover compact" width="100%" data-page-length="25" data-order="[[ 0, &quot;asc&quot;]]">
+    <table id="test4" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot;]]">
         <thead>
             <tr>
                 <th>Name</th>
@@ -133,7 +133,7 @@
         </tbody>
     </table>
     <h3>Test9</h3>
-    <table id="test9" class="hover compact" width="100%" data-page-length="25" data-order="[[ 0, &quot;asc&quot; ]]">
+    <table id="test9" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot; ]]">
         <thead>
             <tr>
                 <th>Name</th>
