Removed route vector and fixed url

--- a/src/main/resources/templates/OpenshiftResource/cronJobReportHistory.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobReportHistory.html
@@ -26,7 +26,7 @@
             <td>{cronJobReport.name}</td>
             <td>{cronJobReport.lastRunDate}</td>
             <td><A href="{cronJobReport.reportUrl}">Link to Report</A></td>
-            <td><A href="{cronJobReport.zipUrl}">Link to full Zip</A>"</td>
+            <td><A href="{cronJobReport.zipUrl}">Link to full Zip</A></td>
         </tr>
         {/for}
         </tbody>
