Updated links to past runs from PVC

--- a/src/main/resources/templates/OpenshiftResource/cronJobReportHistory.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobReportHistory.html
@@ -14,10 +14,10 @@
     <table id="reports" class="hover compact" width="100%" data-order="[[ 1, &quot;asc&quot; ]]">
         <thead>
             <tr>
-                <th>Name</th>
+                <th>Test Name</th>
                 <th>Date Finished</th>
-                <th>Test Zip</th>
-                <th>Test HTML</th>
+                <th>Test HTML Report</th>
+                <th>Test ZIP</th>
             </tr>
         </thead>
         <tbody> 
