Updated how to display time on the report page

--- a/src/main/resources/templates/OpenshiftResource/cronJobReportHistory.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobReportHistory.html
@@ -15,7 +15,7 @@
         <thead>
             <tr>
                 <th>Test Name</th>
-                <th>Date Run Finished</th>
+                <th>Run Finished Date</th>
                 <th>Test HTML Report</th>
                 <th>Test ZIP</th>
                 <th>Test Log File</th>
