--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -12,6 +12,39 @@
 <div class="full-screen" id="main">
     <center><h2>Current List of FFE Selenium Pipeline Runs</h2></center>
     <input type="text" id="searchInput" onkeyup="searchTables()" placeholder="Search for names..">
+
+    {#for env in uniqueEnvs}
+        <h3>{env}</h3>
+        <table id={env} class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot; ]]">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Result</th>
+                <th>Test Results</th>
+                <th>Test Failures</th>
+                <th>Run Time</th>
+                <th>Link</th>
+                <th>Finish Time</th>
+            </tr>
+        </thead>
+        <tbody> 
+        {#for cronJob in cronJobs}
+            {#if cronJob.env == env}               
+                <tr>
+                    <td class="cronjobName">{cronJob.name}</td>
+                    <td bgcolor="{cronJob.color}">{cronJob.result}</td>
+                    <td>{cronJob.msg}</td>
+                    <td class="reveal-cell">{cronJob.failedTests}</td>
+                    <td>{cronJob.runTime}</td>
+                    <td><A href="{cronJob.runLink}">Link to Logs</A></td>
+                    <td>{cronJob.lastTransitionTime}</td>
+                </tr>
+            {/if}
+        {/for}
+        </tbody>
+        </table>
+    {/for}
+    <!--
     <h3>Test 1</h3>
     <table id="test1" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot; ]]">
         <thead>
@@ -162,7 +195,7 @@
         {/if}
         {/for}
         </tbody>
-    </table>
+    </table> -->
 </div>
 
 
@@ -170,11 +203,11 @@
 <script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
 <script src="https://cdn.datatables.net/plug-ins/2.1.7/dataRender/ellipsis.js"></script>
 <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css">
-<script src="/js/cronjobTable.js"></script>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 <link rel="stylesheet" href="/css/index.css">
+<script src="/js/cronjobTable.js"></script>
 
 
 
