--- a/src/main/resources/templates/static/landing-page.html
+++ b/src/main/resources/templates/static/landing-page.html
@@ -14,7 +14,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Selenium Cronjob Results Dashboard</h5>
                         <p class="card-text">View the results of the latest Selneium Jobs kicked off by a Cronjob</p>
-                        <a href="/page1" class="btn btn-primary">Go to Page 1</a>
+                        <a href="/openshift/tester-pipelines/dashboard" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
@@ -23,7 +23,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Selenium Reports Dashboard</h5>
                         <p class="card-text">View all Reports, Logs, and Zip file of saved Selenium Runs. </p>
-                        <a href="/page2" class="btn btn-primary">Go to Page 2</a>
+                        <a href="/pipeline/tester-pipelines/listSeleniumReports/all" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Current Cronjob Schedule Dashboard</h5>
                         <p class="card-text">View all current Selenium CronJob schedules active on OpenShift</p>
-                        <a href="/page3" class="btn btn-primary">Go to Page 3</a>
+                        <a href="/openshift/tester-pipelines/cronjobs" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Create Selenuium Cronjob</h5>
                         <p class="card-text">Create all the required files to add a Cronjob to kick off a Selenium Test</p>
-                        <a href="/page4" class="btn btn-primary">Go to Page 4</a>
+                        <a href="/forums/create-job" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Update Selenium Cronjob</h5>
                         <p class="card-text">Update the Cronjob Scheduling of a Selenium Cronjob</p>
-                        <a href="/page5" class="btn btn-primary">Go to Page 5</a>
+                        <a href="/forums/update-job" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Mass Update Selenium Cronjobs</h5>
                         <p class="card-text">Quickly update the scheduling of multiple Selenium Cronjobs</p>
-                        <a href="/page5" class="btn btn-primary">Go to Page 5</a>
+                        <a href="/forums/mass-update" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Kick Off Selenium Pipeline</h5>
                         <p class="card-text">Launch a new Selenium Job to run on Openshift and CMS Selenium Grid. Results will be saved. </p>
-                        <a href="/page5" class="btn btn-primary">Go to Page 5</a>
+                        <a href="/forums/start-job" class="btn btn-primary">Go to Link</a>
                     </div>
                 </div>
             </div>
