--- a/src/main/resources/templates/ForumsResource/newSeleniumJob.html
+++ b/src/main/resources/templates/ForumsResource/newSeleniumJob.html
@@ -5,63 +5,53 @@
     <title>FFE Cronjob Creator</title>
   </head>
   <body>
-    {% include '/static/nav.html' %}
+     {#include nav.html} {/include}
     <div class="container" id="main">
       <h2>Fill out the form to create FFE Selenium Test Cronjob Template files</h2>
       <form id="cronForum">
-        <div class="control-wrapper">
-          <label class="input-label" for="releaseBranch">Release Branch:</label>
-          <div class="input-wrapper">
-            <input
-              id="releaseBranch"
-              class="input"
-              type="text"
-            />
+          <div class="control-wrapper">
+            <div class="form-group">
+                  <label for="releaseBranch">Release Branch:</label>
+                  <input type="text" class="form-control" id="releaseBranch" required >
+                </div>
+            <div class="form-group">
+            <label for="userNameFFM" class="form-label">User Name:</label>
+            <input type="text" class="form-control" id="userNameFFM" required>
+            </div>
+          <div class="form-group">
+            <label for="userPassword" class="form-label">User Password:</label>
+            <input type="text" class="form-control" id="userPassword" required>
           </div>
-          <!-- <input type="text" class="form-control" id="releaseBranch"> -->
-        </div>
-        <div class="form-group">
-          <label for="userNameFFM">User Name:</label>
-          <input type="text" class="form-control" id="userNameFFM">
-        </div>
-        <div class="form-group">
-          <label for="userPassword">User Password:</label>
-          <input type="text" class="form-control" id="userPassword">
-        </div>
-        <div class="form-group">
-          <label for="groups">Groups:</label>
-          <input type="text" class="form-control" id="groups">
-        </div>
-        <div class="form-group">
-          <label for="browser">Browser:</label>
-          <input type="text" class="form-control" id="browser" placeholder="Use box to connect to CMS Selenium Grid">
-        </div>
-        <div class="form-group">
-            <label for="url">Url:</label>
-            <input type="text" class="form-control" id="url" placeholder="Use name from data.properties">
-        </div>
-        <div class="form-group">
-            <label for="seleniumTestEmailList">Selenium Test EmailList:</label>
-            <input type="text" class="form-control" id="seleniumTestEmailList" placeholder="Seperate by a ,">
-        </div>
-        <div class="form-group">
-          <label for="cronJobSchedule">Cron Job Schedule:</label>
-          <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format with EST timezone">
-        </div>
-        <div style="color:#43916B" id="successMessage" hidden="true"> 
-          <p>Successfully created cronjob files. Check download folder.</p>
-        </div>
-        <div style="color:#CF4B2F" id="errorMessage"></div>
-        <div class="control-wrapper">
-          <button type="submit" class="button button-outline">Submit</button>
-        </div>
+          <div class="form-group">
+            <label for="groups" class="form-label">Groups:</label>
+            <input type="text" class="form-control" id="groups" required>
+          </div>
+          <div class="form-group">
+            <label for="browser"> class="form-label"Browser:</label>
+            <input type="text" class="form-control" id="browser" placeholder="Use box to connect to CMS Selenium Grid" required>
+          </div>
+          <div class="form-group">
+              <label for="url" class="form-label">Url:</label>
+              <input type="text" class="form-control" id="url" placeholder="Use name from data.properties" required>
+          </div>
+          <div class="form-group" class="form-label">
+              <label for="seleniumTestEmailList">Selenium Test EmailList:</label>
+              <input type="text" class="form-control" id="seleniumTestEmailList" placeholder="Seperate by a ," required>
+          </div>
+          <div class="form-group">
+            <label for="cronJobSchedule" class="form-label">Cron Job Schedule:</label>
+            <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format with EST timezone" required>
+          </div>
+          <div style="color:#43916B" id="successMessage" hidden="true"> 
+            <p>Successfully created cronjob files. Check download folder.</p>
+          </div>
+          <div style="color:#CF4B2F" id="errorMessage"></div>
+          <div class="control-wrapper">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>  
       </form>
     </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
-  <script>
-    const validate = new window.JustValidate('#cronForum');
-  </script>
   <script src="/js/index.js"></script>
   <link href="/css/flaty-bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
