--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class= "navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/images/OSIcon.jfif" alt="OpenShift" width="30" height="30">
+                <img src="/images/selenium-logo.png" alt="Selenuium" width="30" height="30">
             </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,30 +9,30 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Dashboards
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Selenium Cronjob Results Dashboard</a></li>
-                  <li><a class="dropdown-item" href="#">Selenium Reports Dashboard</a></li>
-                  <li><a class="dropdown-item" href="#">Current Cronjob Schedule Dashboard</a></li>
+                  <li><a class="dropdown-item" href="/openshift/tester-pipelines/dashboard">Selenium Cronjob Results Dashboard</a></li>
+                  <li><a class="dropdown-item" href="/pipeline/tester-pipelines/listSeleniumReports/all">Selenium Saved Results Dashboard</a></li>
+                  <li><a class="dropdown-item" href="/openshift/tester-pipelines/cronjobs">Current Cronjob Schedule Dashboard</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Edit Cronjob
+                  Create/Edit Cronjobs
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Create Selenuium Cronjob</a></li>
-                  <li><a class="dropdown-item" href="#">Update Selenium Cronjob</a></li>
-                  <li><a class="dropdown-item" href="#">Mass Update Selenium Cronjobs</a></li>
+                  <li><a class="dropdown-item" href="/forums/create-job">Create Selenuium Cronjob</a></li>
+                  <li><a class="dropdown-item" href="/forums/update-job">Update Selenium Cronjob</a></li>
+                  <li><a class="dropdown-item" href="/forums/mass-update">Mass Update Selenium Cronjobs</a></li>
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Kick Off Selenium Pipeline</a>
+                <a class="nav-link" href="/forums/start-pipeline">Kick Off a Selenium Pipeline</a>
               </li>
             </ul>
           </div>
