--- a/src/main/resources/templates/ForumsResource/massUpdate.html
+++ b/src/main/resources/templates/ForumsResource/massUpdate.html
@@ -25,8 +25,9 @@
         </div>
         <div style="color:#CF4B2F" id="errorMessage"></div>
     </div>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
      <script src="/js/mass-update.js"></script>
-    <link href="/css/flaty-bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
