--- a/src/main/resources/templates/ForumsResource/newSeleniumJob.html
+++ b/src/main/resources/templates/ForumsResource/newSeleniumJob.html
@@ -27,8 +27,8 @@
             <input type="text" class="form-control" id="groups" required>
           </div>
           <div class="form-group">
-            <label for="browser"> class="form-label"Browser:</label>
-            <input type="text" class="form-control" id="browser" placeholder="Use box to connect to CMS Selenium Grid" required>
+            <label for="browser" class="form-label">Browser:</label>
+            <input type="text" class="form-control" id="browser" value="box" required>
           </div>
           <div class="form-group">
               <label for="url" class="form-label">Url:</label>
@@ -42,6 +42,7 @@
             <label for="cronJobSchedule" class="form-label">Cron Job Schedule:</label>
             <input type="text" class="form-control" id="cronJobSchedule" placeholder="Use * * * * format with EST timezone" required>
           </div>
+          <BR>
           <div style="color:#43916B" id="successMessage" hidden="true"> 
             <p>Successfully created cronjob files. Check download folder.</p>
           </div>
@@ -52,8 +53,9 @@
         </div>  
       </form>
     </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/js/index.js"></script>
-  <link href="/css/flaty-bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
