--- a/src/main/resources/templates/ForumsResource/updateCronJobSchedule.html
+++ b/src/main/resources/templates/ForumsResource/updateCronJobSchedule.html
@@ -18,6 +18,7 @@
             <label for="verifyCronJobSchedule">Current CronJob Schedule</label>
             <input type="text" class="form-control" id="verifyCronJobSchedule" readonly>
           </div>
+          <BR>
           <button type="submit" class="btn btn-primary" id="GetSchedule">Get Schedule</button>
       </div>
     </P>
@@ -26,6 +27,7 @@
     <div id="updateInfoContainer">
     </div>
     <label>Cronjobs:</label>
+    <BR>
     <div id="pairContainer"></div>
     <button type="button" class="btn btn-primary" onclick="addPair()">Add Cronjob</button>
     <button type="button" class="btn btn-primary" onclick="submitPairs()">Submit</button>
@@ -36,7 +38,7 @@
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="/js/update.js"></script>
-  <link href="/css/flaty-bootstrap.min.css" rel="stylesheet">
+  <link href="/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
