--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -5,14 +5,10 @@
     <title>FFE Selenium CronJob Dashboard</title>
 </head>
 <body>
-{#include menu.html}
-{/include}
-<!-- Use any element to open the sidenav -->
-<span onclick="openNav()"><h3>Menu</h3></span>
+{#include nav.html} {/include}
 <div class="full-screen" id="main">
     <center><h2>Current List of FFE Selenium Pipeline Runs</h2></center>
-    <input type="text" id="searchInput" onkeyup="searchTables()" placeholder="Search for names..">
-
+    
     {#for env in uniqueEnvs}
         <h3>{env}</h3>
         <table id={env} class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot; ]]">
@@ -198,16 +194,30 @@
     </table> -->
 </div>
 
-
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
 <script src="https://cdn.datatables.net/plug-ins/2.1.7/dataRender/ellipsis.js"></script>
 <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-<link rel="stylesheet" href="/css/index.css">
 <script src="/js/cronjobTable.js"></script>
+<style>
+    .reveal-cell { 
+        cursor: pointer; 
+        white-space: nowrap; 
+        overflow: hidden; 
+        text-overflow: ellipsis; 
+        max-width: 150px; 
+    } 
+        
+    .reveal-cell.expanded { 
+        white-space: normal; 
+        max-width: none;
+        white-space: pre-line;
+    }
+</style>
+
+
 
 
 
