--- a/src/main/resources/templates/OpenshiftResource/cronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobData.html
@@ -5,13 +5,9 @@
     <title>FFE Selenium CronJob Schedule</title>
 </head>
 <body>
-{#include menu.html}
-{/include}
-<!-- Use any element to open the sidenav -->
-<span onclick="openNav()"><h3>Menu</h3></span>
+{#include nav.html} {/include}
 <div class="container" id="main">
     <h2>Current List of FFE Selenium CronJobs</h2>
-    <input type="text" id="searchInput" onkeyup="searchTables()" placeholder="Search for names..">
     <h3>Test 1</h3>
     <table id="test1" class="display" width="100%">
         <thead>
@@ -133,10 +129,8 @@
 <script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
 <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css">
 <script src="/js/cronjobData.js"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
-<link rel="stylesheet" href="/css/index.css">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 </html>
