--- a/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
+++ b/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
@@ -75,7 +75,7 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css">
 <script src="https://cdn.datatables.net/plug-ins/2.1.7/dataRender/ellipsis.js"></script>
 <script src="/js/cronjobReport.js"></script>
-<link href="/css/flaty-bootstrap.min.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
