Added in a progress bar when loading long requests

--- a/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
+++ b/src/main/resources/templates/OpenshiftResource/cronJobDashboard.html
@@ -40,158 +40,6 @@
         </tbody>
         </table>
     {/for}
-    <!--
-    <h3>Test 1</h3>
-    <table id="test1" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot; ]]">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Result</th>
-                <th>Test Results</th>
-                <th>Test Failures</th>
-                <th>Run Time</th>
-                <th>Link</th>
-                <th>Finish Time</th>
-            </tr>
-        </thead>
-        <tbody> 
-        {#for cronJob in cronJobs}
-        {#if cronJob.env == "test1"}
-                 
-            <tr>
-                <td class="cronjobName">{cronJob.name}</td>
-                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
-                <td>{cronJob.msg}</td>
-                <td class="reveal-cell">{cronJob.failedTests}</td>
-                <td>{cronJob.runTime}</td>
-                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
-                <td>{cronJob.lastTransitionTime}</td>
-            </tr>
-        
-        {/if}
-        {/for}
-        </tbody>
-    </table>
-    <h3>Test 2</h3>
-    <table id="test2" class="hover compact" width="100%"  data-order="[[ 0, &quot;asc&quot; ]]">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Result</th>
-                <th>Test Results</th>
-                <th>Test Failures</th>
-                <th>Run Time</th>
-                <th>Link</th>
-                <th>Last Upate Time</th>
-            </tr>
-        </thead>
-        <tbody>
-        {#for cronJob in cronJobs}
-        {#if cronJob.env == "test2"}
-             <tr>
-                <td class="cronjobName">{cronJob.name}</td>
-                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
-                <td>{cronJob.msg}</td>
-                <td class="reveal-cell">{cronJob.failedTests}</td>
-                <td>{cronJob.runTime}</td>
-                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
-                <td>{cronJob.lastTransitionTime}</td>
-            </tr>
-        {/if}
-        {/for}
-        </tbody>
-    </table>
-    <h3>Test 3</h3>
-    <table id="test3" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot;]]">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Result</th>
-                <th>Test Results</th>
-                <th>Test Failures</th>
-                <th>Run Time</th>
-                <th>Link</th>
-                <th>Last Upate Time</th>
-            </tr>
-        </thead>
-        <tbody>
-        {#for cronJob in cronJobs}
-        {#if cronJob.env == "test3"}
-        
-            <tr>
-                <td class="cronjobName">{cronJob.name}</td>
-                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
-                <td>{cronJob.msg}</td>
-                <td class="reveal-cell">{cronJob.failedTests}</td>
-                <td>{cronJob.runTime}</td>
-                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
-                <td>{cronJob.lastTransitionTime}</td>
-            </tr>
-        
-        {/if}
-        {/for}
-        </tbody>
-    </table>
-    <h3>Test4</h3>
-    <table id="test4" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot;]]">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Result</th>
-                <th>Test Results</th>
-                <th>Test Failures</th>
-                <th>Run Time</th>
-                <th>Link</th>
-                <th>Last Upate Time</th>
-            </tr>
-        </thead>
-        <tbody>
-        {#for cronJob in cronJobs}
-        {#if cronJob.env == "test4"}
-            <tr>
-                <td class="cronjobName">{cronJob.name}</td>
-                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
-                <td>{cronJob.msg}</td>
-                <td class="reveal-cell">{cronJob.failedTests}</td>
-                <td>{cronJob.runTime}</td>
-                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
-                <td>{cronJob.lastTransitionTime}</td>
-            </tr>      
-        {/if}
-        {/for}
-        </tbody>
-    </table>
-    <h3>Test9</h3>
-    <table id="test9" class="hover compact" width="100%" data-order="[[ 0, &quot;asc&quot; ]]">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Result</th>
-                <th>Test Results</th>
-                <th>Test Failures</th>
-                <th>Run Time</th>
-                <th>Link</th>
-                <th>Last Upate Time</th>
-            </tr>
-        </thead>
-        <tbody>
-        {#for cronJob in cronJobs}
-        {#if cronJob.env == "test9"}
-        
-            <tr>
-                <td class="cronjobName">{cronJob.name}</td>
-                <td bgcolor="{cronJob.color}">{cronJob.result}</td>
-                <td>{cronJob.msg}</td>
-                <td class="reveal-cell">{cronJob.failedTests}</td>
-                <td>{cronJob.runTime}</td>
-                <td><A href="{cronJob.runLink}">Link to Logs</A></td>
-                <td>{cronJob.lastTransitionTime}</td>
-            </tr>
-
-        {/if}
-        {/for}
-        </tbody>
-    </table> -->
 </div>
 
 <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -216,7 +64,7 @@
         white-space: pre-line;
     }
 </style>
-
+{#include progress-bar.html} {/include}
 
 
 
