--- a/src/main/resources/templates/ForumsResource/startPipeline.html
+++ b/src/main/resources/templates/ForumsResource/startPipeline.html
@@ -57,5 +57,6 @@
   <script src="/js/pipeline.js"></script>
   <link href="/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  {#include progress-bar.html} {/include}
   </body>
 </html>
