--- a/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
+++ b/src/main/resources/templates/OpenshiftResource/gatlingCronJobData.html
@@ -38,6 +38,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css">
 <link rel="stylesheet" href="/css/index.css">
-
+{#include progress-bar.html} {/include}
 </body>
 </html>
