--- a/src/main/resources/templates/nav.html
+++ b/src/main/resources/templates/nav.html
@@ -16,9 +16,9 @@
                   Dashboards
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="/openshift/tester-pipelines/dashboard">Selenium Cronjob Results Dashboard</a></li>
-                  <li><a class="dropdown-item" href="/pipeline/tester-pipelines/listSeleniumReports/cj">Selenium Saved Results Dashboard</a></li>
-                  <li><a class="dropdown-item" href="/openshift/tester-pipelines/cronjobs">Current Cronjob Schedule Dashboard</a></li>
+                  <li><a class="dropdown-item progress-bar" href="/openshift/tester-pipelines/dashboard">Selenium Cronjob Results Dashboard</a></li>
+                  <li><a class="dropdown-item progress-bar" href="/pipeline/tester-pipelines/listSeleniumReports/cj">Selenium Saved Results Dashboard</a></li>
+                  <li><a class="dropdown-item progress-bar" href="/openshift/tester-pipelines/cronjobs">Current Cronjob Schedule Dashboard</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
