--- a/src/main/resources/templates/ForumsResource/newSeleniumJob.html
+++ b/src/main/resources/templates/ForumsResource/newSeleniumJob.html
@@ -54,9 +54,9 @@
       </form>
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="/js/new-cronjob.js"></script>
   <link href="/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="/js/bootstrap.5.3.3.bundle.min.js"></script>
   {#include progress-bar.html} {/include}
   </body>
 </html>
