--- a/src/main/resources/templates/PipelineResource/cronJobReportHistoryAlt.html
+++ b/src/main/resources/templates/PipelineResource/cronJobReportHistoryAlt.html
@@ -34,7 +34,7 @@
                                                 {reportDataList.runName}
                                             </button>
                                         </h2>
-                                        <div id="{reportDataList.runName}" class="accordion-collapse collapse show" aria-labelledby="heading{reportDataList.runName}" data-bs-parent="#accordion{env}" style=""></div>
+                                        <div id="{reportDataList.runName}" class="accordion-collapse collapse" aria-labelledby="heading{reportDataList.runName}" data-bs-parent="#accordion{env}" style=""  data-bs-toggle="collapse"></div>
                                             <div class="accordion-body">
                                                 <table id="{reportDataList.runName}Table" class="table table-hover">
                                                     <thead>
@@ -57,7 +57,7 @@
                                                     </tbody>
                                                 </table>
                                             </div>
-                                         
+                                        </div> 
                                     </div>                                  
                                 </td>
                             </tr>
