Reworked how to read files to be fast/non blocking

--- a/src/main/resources/templates/PipelineResource/cronJobReportHistoryAlt.html
+++ b/src/main/resources/templates/PipelineResource/cronJobReportHistoryAlt.html
@@ -32,11 +32,11 @@
                                         <td>
                                             <div class="accordion-item">
                                                 <h2 class="accordion-header" id="heading-{reportDataList.runName}">
-                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{reportDataList.runName}-body" aria-expanded="false" aria-controls="{reportDataList.runName}-body">
+                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{reportDataList.runName}-body" aria-expanded="false" aria-controls="{reportDataList.runName}-body" style="">
                                                         {reportDataList.runName}
                                                     </button>
                                                 </h2>
-                                                <div id="{reportDataList.runName}-body" class="accordion-collapse collapse" aria-labelledby="heading-{reportDataList.runName}" data-bs-parent="#accordion-{env}" style=""> <!-- MOving the accordion-collapse end div here allows links to work -->
+                                                <div id="{reportDataList.runName}-body" class="accordion-collapse collapse" aria-labelledby="heading-{reportDataList.runName}" data-bs-parent="#accordion-{env}" style="">
                                                     <div class="accordion-body">
                                                         <table id="{reportDataList.runName}-Table" class="table">
                                                             <thead>
