Added checking for blank names on Display

--- a/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
+++ b/src/main/resources/templates/PipelineResource/cronJobReportHistory.html
@@ -33,7 +33,7 @@
                                             <div class="accordion-item">
                                                 <h2 class="accordion-header" id="heading-{reportDataList.runName}">
                                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{reportDataList.runName}-body" aria-expanded="false" aria-controls="{reportDataList.runName}-body" style="">
-                                                        {reportDataList.runName}
+                                                        {reportDataList.displayName}
                                                     </button>
                                                 </h2>
                                                 <div id="{reportDataList.runName}-body" class="accordion-collapse collapse" aria-labelledby="heading-{reportDataList.runName}" data-bs-parent="#accordion-{env}" style="">
